# edge_auto_launch

./: .cspell.json  README.md
edge_auto_launch/: CMakeLists.txt  package.xml
edge_auto_launch/config/: can_assign_matrix.yaml  centerpoint.param.yaml  centerpoint_tiny.param.yaml  roi_cluster_fusion.param.yaml  roi_sync.param.yaml  sample_calibration.yaml  scan_ground_filter.param.yaml  vehicle_info.param.yaml
edge_auto_launch/config/visualization/: calibration_extrinsic_at128_camera0.rviz  calibration_extrinsic_at128_camera1.rviz  calibration_extrinsic_xt32_camera0.rviz  calibration_extrinsic_xt32_camera1.rviz  perception_at128_sample.perspective  perception_at128_sample.rviz  perception_xt32_sample.rviz  tag_calib_camera0_aw_points.rviz  tag_calib_camera1_aw_points.rviz
edge_auto_launch/launch/: calibration_extrinsic_at128_sample.launch.xml  calibration_extrinsic_xt32_sample.launch.xml  calibration_intrinsic_sample.launch.xml  crop_box_filter.launch.xml  demo_tag_based.launch.xml  edge_auto_sample1.launch.xml  edge_auto_sample2.launch.xml  extrinsic_tag_based_calibrator.launch.xml  hesai_at128.launch.xml  hesai_pandar_xt32.launch.xml  intrinsic_camera_calibrator.launch.xml  lidar_centerpoint.launch.xml  perception_at128_sample.launch.xml  perception_xt32_sample.launch.xml  voxel_grid_based_euclidean_cluster.launch.xml
edge_auto_launch/launch/component/: crop_box_filter.launch.xml  extrinsic_manual_calibrator.launch.xml  extrinsic_tag_based_calibrator.launch.xml  hesai_at128.launch.xml  hesai_pandar_xt32.launch.xml  lidar_camera_tf_publisher.launch.py  lidar_centerpoint.launch.xml  (+6 more)
