<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>edge_auto_launch</name>
  <version>0.1.0</version>
  <description>The package for meta-package for edge-auto launchers</description>

  <maintainer email="aohsato@gmail.com">Akihito OHSATO</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_auto_perception_rviz_plugin</exec_depend>
  <exec_depend>detected_object_feature_remover</exec_depend>
  <exec_depend>euclidean_cluster</exec_depend>
  <exec_depend>extrinsic_calibration_manager</exec_depend>
  <exec_depend>extrinsic_manual_calibrator</exec_depend>
  <exec_depend>extrinsic_tag_based_calibrator</exec_depend>
  <exec_depend>ground_segmentation</exec_depend>
  <exec_depend>intrinsic_camera_calibrator</exec_depend>
  <exec_depend>autoware_lidar_centerpoint</exec_depend>
  <exec_depend>nebula_sensor_driver</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>shape_estimation</exec_depend>
  <exec_depend>vehicle_info_util</exec_depend>
  <exec_depend>image_transport_decompressor</exec_depend>
  <exec_depend>individual_params</exec_depend>
  <exec_depend>image_projection_based_fusion</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
